--- a/README.Rmd
+++ b/README.Rmd
@@ -16,29 +16,16 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 <!-- badges: end -->
-
 The goal of defraEmissionsFactors is to make emissions factors provided by DEFRA more easily accessible and transparent.
+
+## Emissions factors
+
 
 The starting point is [Greenhouse gas reporting: conversion factors 2018](https://www.gov.uk/government/publications/greenhouse-gas-reporting-conversion-factors-2018).
 The following code chunk downloads and extracts relevant data, in this case kg CO2 per km, for different car sizes:
 
 ```{r cars, message=FALSE}
-library(tidyverse)
-u2018 = "https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/715425/Conversion_Factors_2018_-_Condensed_set__for_most_users__v01-01.xls"
-f = file.path(tempdir(), "Conversion_Factors_2018_-_Condensed_set__for_most_users__v01-01.xls")
-download.file(u2018, f)
-cars_size = readxl::read_excel(f, sheet = "Passenger vehicles", skip = 45) %>%
-  rename_all(snakecase::to_snake_case) %>% 
-  rename_all(gsub, pattern = "kg_|_[0-9]+$", replacement = "")
-propulsion_types = c("petrol", "diesel", "hybrid", "CNG", "LPG", "Unknown", "phev", "bev")
-names(cars_size)[5:36] = paste(names(cars_size[5:36]), rep(propulsion_types, each = 4), sep = "_")
-cars_size_co2 = cars_size %>% 
-  select(-(1:2)) %>%
-  select(matches("type|unit|co_2_[d|p|h]")) %>% 
-  filter(unit == "km") %>% 
-  slice(1:4) %>% 
-  select(-unit) %>% 
-    mutate(co_2_petrol = as.numeric(co_2_petrol))
+source("code/defra-emissions.R")
 knitr::kable(cars_size_co2, digits = 3)
 ```
 
@@ -91,3 +78,8 @@ cars_energy = cars_energy_kwh %>%
   
 ```
 
+## Embodied energy of fuel
+
+
+
+## Embodied energy of vehicles
